# sber

./: catboost_best_model.cbm  preprocessed_data.csv  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
src/: load_analyze_sber_task.py  test_sber_task.py  train.py
