[tool.poetry]
name = "sber"
version = "0.1.0"
description = "Sber_task 30.11"
authors = ["Ilya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
catboost = "^1.2.2"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
